# SimpleBLETool

./: .gitmodules  BLEPeripheralDialog.cpp  BLEPeripheralDialog.h  BLERSSIDialog.cpp  BLERSSIDialog.h  CMakeLists.txt  GUIFrame.cpp  GUIFrame.h  InputDialog.cpp  InputDialog.h  ReadMe.md  SimpleBLETool.desktop  SimpleBLEToolApp.cpp  SimpleBLEToolApp.h  SimpleBLEToolGUIFrame.cpp  SimpleBLEToolGUIFrame.h  SimpleBLEToolMain.cpp  SimpleBLEToolMain.h  WxWizFrame.fbp  misc.cpp  misc.h
bluetooth/: CompanyIdentfiers - CSV.csv  ReadMe.md  ble_company_id.cpp  ble_company_id.h  ble_company_id_data.c  gatt_profile_uuid.h
win32/: window_resources.rc
win32/nsis/: README.txt  WELCOME.txt
